--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,18 +13,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.AZURE_SSH_PASSWORD }}
+    - name: Install sshpass
+      run: sudo apt-get update && sudo apt-get install -y sshpass
 
     - name: Copy Docker Compose files to Azure VM
       run: |
-        scp -r ./docker-compose.yml ./retail-inventory ./screenshots ${{ secrets.AZURE_USERNAME }}@${{ secrets.AZURE_HOST }}:/home/${{ secrets.AZURE_USERNAME }}/app
+        sshpass -p ${{ secrets.AZURE_SSH_PASSWORD }} scp -r ./docker-compose.yml ./retail-inventory ./screenshots ${{ secrets.AZURE_USERNAME }}@${{ secrets.AZURE_HOST }}:/home/${{ secrets.AZURE_USERNAME }}/app
 
     - name: SSH into Azure VM and deploy
       run: |
-        ssh ${{ secrets.AZURE_USERNAME }}@${{ secrets.AZURE_HOST }} << 'EOF'
+        sshpass -p ${{ secrets.AZURE_SSH_PASSWORD }} ssh -o StrictHostKeyChecking=no ${{ secrets.AZURE_USERNAME }}@${{ secrets.AZURE_HOST }} << 'EOF'
           cd /home/${{ secrets.AZURE_USERNAME }}/app
           docker-compose down
           docker-compose up -d
